Fix grid spacing, restore scrollbars.

--- a/resources/frontend/lobby.css
+++ b/resources/frontend/lobby.css
@@ -87,6 +87,9 @@
     height: 0;
     padding-bottom: 56.25%;
     position: relative;
+    border-radius: 15px;
+    border: 2px solid #9ad4e5;
+    overflow: hidden;
 }
 
 #drawing-board-inner-wrapper {
@@ -102,9 +105,6 @@
     background-color: white;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    border: 2px solid #9ad4e5;
-    overflow: hidden;
 }
 
 #center-dialog {
@@ -146,6 +146,9 @@
     grid-column: 3;
     grid-row-start: 2;
     grid-row-end: 4;
+    border-radius: 15px;
+    border: 2px solid #9ad4e5;
+    overflow: hidden;
 }
 
 #message-container {
@@ -153,12 +156,6 @@
     overflow-y: scroll;
     word-break: break-all;
     background-color: white;
-    border-radius: 15px;
-    border: 2px solid #9ad4e5;
-    border-bottom: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    overflow: hidden;
 }
 
 #word-container {
@@ -179,12 +176,6 @@
 
 .message-input-form {
     display: flex;
-    border-radius: 15px;
-    border: 2px solid #9ad4e5;
-    border-top: 0px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    overflow: hidden;
 }
 
 #message-input {
